--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
 <body>
     <div id="info">Space Wars: X-Wing vs Death Star</div>
     <div id="loading">Loading...</div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
 </body>
 </html> 
